{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 62,
  "lineage": "d0957e77-cac5-1e5d-1c57-8222913ea1a1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-public-nwl-346",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccc07e9df01a6185",
            "arn": "arn:aws:ec2:us-east-1:198379572505:elastic-ip/eipalloc-0ccc07e9df01a6185",
            "association_id": "eipassoc-0b2a4c737616a08c5",
            "domain": "vpc",
            "id": "eipalloc-0ccc07e9df01a6185",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03394d58958bc6cd0",
            "private_dns": "ip-10-0-1-247.ec2.internal",
            "private_ip": "10.0.1.247",
            "public_dns": "ec2-50-17-216-87.compute-1.amazonaws.com",
            "public_ip": "50.17.216.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-public-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tags_all": {
              "Name": "eip-public-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dbsrv01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe74bfcad4fd6bd2",
            "arn": "arn:aws:ec2:us-east-1:198379572505:instance/i-060a8d358179afffb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060a8d358179afffb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06303aa76c2611182",
            "private_dns": "ip-10-0-2-239.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-018484a03e946a12e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038ed37d2db5e8b2f",
            "tags": {
              "Name": "dbsrv01-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tags_all": {
              "Name": "dbsrv01-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc422c772be515cd"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg-private-nwl-346",
            "aws_subnet.snet-private-nwl-346",
            "aws_subnet.snet-public-nwl-346",
            "aws_vpc.vpc-nwl-346",
            "data.aws_ami.al2023",
            "data.aws_key_pair.vockey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dbsrv02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040a155879de85e73",
            "arn": "arn:aws:ec2:us-east-1:198379572505:instance/i-0cbeaceaa73370e4a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cbeaceaa73370e4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a2ae46e0ab05a14",
            "private_dns": "ip-10-0-2-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e804abd04f0c444",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038ed37d2db5e8b2f",
            "tags": {
              "Name": "dbsrv02-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tags_all": {
              "Name": "dbsrv02-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc422c772be515cd"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg-private-nwl-346",
            "aws_subnet.snet-private-nwl-346",
            "aws_subnet.snet-public-nwl-346",
            "aws_vpc.vpc-nwl-346",
            "data.aws_ami.windows2022",
            "data.aws_key_pair.vockey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "websrv01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe74bfcad4fd6bd2",
            "arn": "arn:aws:ec2:us-east-1:198379572505:instance/i-05c3d060bcd187a19",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c3d060bcd187a19",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-059d1c81c5255b440",
            "private_dns": "ip-10-0-1-124.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.124",
            "public_ip": "100.54.115.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0726649ebf77f8dca",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c34133382583f5e5",
            "tags": {
              "Name": "websrv01-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tags_all": {
              "Name": "websrv01-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08937b559e92da83e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg-public-nwl-346",
            "aws_subnet.snet-public-nwl-346",
            "aws_vpc.vpc-nwl-346",
            "data.aws_ami.al2023",
            "data.aws_key_pair.vockey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198379572505:internet-gateway/igw-01678cfb43d4a460b",
            "id": "igw-01678cfb43d4a460b",
            "owner_id": "198379572505",
            "tags": {
              "Name": "igw-nwl-346"
            },
            "tags_all": {
              "Name": "igw-nwl-346"
            },
            "vpc_id": "vpc-07a09f9b65fc127a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-nwl-346"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-public-nwl-346",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccc07e9df01a6185",
            "association_id": "eipassoc-0b2a4c737616a08c5",
            "connectivity_type": "public",
            "id": "nat-077b6915203651f52",
            "network_interface_id": "eni-03394d58958bc6cd0",
            "private_ip": "10.0.1.247",
            "public_ip": "50.17.216.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c34133382583f5e5",
            "tags": {
              "Name": "ngw-public-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tags_all": {
              "Name": "ngw-public-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip-public-nwl-346",
            "aws_subnet.snet-public-nwl-346",
            "aws_vpc.vpc-nwl-346"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-private-nwl-346",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198379572505:network-acl/acl-04bcf5a3947a49abe",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04bcf5a3947a49abe",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "198379572505",
            "subnet_ids": [
              "subnet-038ed37d2db5e8b2f"
            ],
            "tags": {
              "Name": "acl-private-nwl-346"
            },
            "tags_all": {
              "Name": "acl-private-nwl-346"
            },
            "vpc_id": "vpc-07a09f9b65fc127a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.snet-private-nwl-346",
            "aws_subnet.snet-public-nwl-346",
            "aws_vpc.vpc-nwl-346"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-public-nwl-346",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198379572505:network-acl/acl-0648d404f0318dc49",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0648d404f0318dc49",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 80
              }
            ],
            "owner_id": "198379572505",
            "subnet_ids": [
              "subnet-0c34133382583f5e5"
            ],
            "tags": {
              "Name": "acl-public-nwl-346"
            },
            "tags_all": {
              "Name": "acl-public-nwl-346"
            },
            "vpc_id": "vpc-07a09f9b65fc127a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.snet-public-nwl-346",
            "aws_vpc.vpc-nwl-346"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private-nwl-346",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198379572505:route-table/rtb-00a1967a0500dfe9f",
            "id": "rtb-00a1967a0500dfe9f",
            "owner_id": "198379572505",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-077b6915203651f52",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tags_all": {
              "Name": "rt-private-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a09f9b65fc127a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip-public-nwl-346",
            "aws_nat_gateway.ngw-public-nwl-346",
            "aws_subnet.snet-public-nwl-346",
            "aws_vpc.vpc-nwl-346"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public-nwl-346",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198379572505:route-table/rtb-0144c6791e6f13618",
            "id": "rtb-0144c6791e6f13618",
            "owner_id": "198379572505",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01678cfb43d4a460b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tags_all": {
              "Name": "rt-public-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a09f9b65fc127a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_vpc.vpc-nwl-346"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d774d20d3c70b57",
            "route_table_id": "rtb-0144c6791e6f13618",
            "subnet_id": "subnet-0c34133382583f5e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_route_table.rt-public-nwl-346",
            "aws_subnet.snet-public-nwl-346",
            "aws_vpc.vpc-nwl-346"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc49c3d1e5055faf",
            "route_table_id": "rtb-00a1967a0500dfe9f",
            "subnet_id": "subnet-038ed37d2db5e8b2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip-public-nwl-346",
            "aws_nat_gateway.ngw-public-nwl-346",
            "aws_route_table.rt-private-nwl-346",
            "aws_subnet.snet-private-nwl-346",
            "aws_subnet.snet-public-nwl-346",
            "aws_vpc.vpc-nwl-346"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-private-nwl-346",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198379572505:security-group/sg-0cc422c772be515cd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc422c772be515cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "ICMP Zugriff",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "terraform-20260831115727011700000004",
            "name_prefix": "terraform-",
            "owner_id": "198379572505",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-private-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tags_all": {
              "Name": "sg-private-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a09f9b65fc127a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.snet-public-nwl-346",
            "aws_vpc.vpc-nwl-346"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-public-nwl-346",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198379572505:security-group/sg-08937b559e92da83e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08937b559e92da83e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Zugriff",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Webserver Zugriff",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260831115726037100000001",
            "name_prefix": "terraform-",
            "owner_id": "198379572505",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-public-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tags_all": {
              "Name": "sg-public-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a09f9b65fc127a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-nwl-346"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snet-private-nwl-346",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198379572505:subnet/subnet-038ed37d2db5e8b2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038ed37d2db5e8b2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198379572505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snet-private-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tags_all": {
              "Name": "snet-private-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "vpc_id": "vpc-07a09f9b65fc127a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-nwl-346"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snet-public-nwl-346",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198379572505:subnet/subnet-0c34133382583f5e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c34133382583f5e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198379572505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snet-public-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tags_all": {
              "Name": "snet-public-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "vpc_id": "vpc-07a09f9b65fc127a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-nwl-346"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-nwl-346",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198379572505:vpc/vpc-07a09f9b65fc127a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2a11cba0b678ba8",
            "default_route_table_id": "rtb-066d5386eeff3309f",
            "default_security_group_id": "sg-09e8db6121e1705f0",
            "dhcp_options_id": "dopt-0128c00b515b3e98f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a09f9b65fc127a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066d5386eeff3309f",
            "owner_id": "198379572505",
            "tags": {
              "Name": "vpc-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            },
            "tags_all": {
              "Name": "vpc-nwl-346",
              "archuuid": "14825954-f6d5-491d-a46f-ade64fc2d95f",
              "env": "Development"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}